--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
-  "name": "documents-portfoliosite",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/preact": "^4.1.0",
-    "astro": "^5.12.9",
-    "preact": "^10.27.1"
-  }
+    "name": "dante-astro-theme",
+    "type": "module",
+    "version": "0.2.0",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/mdx": "^4.2.3",
+        "@astrojs/rss": "^4.0.11",
+        "@astrojs/sitemap": "^3.3.0",
+        "@fontsource-variable/inter": "^5.2.5",
+        "@fontsource-variable/newsreader": "^5.2.6",
+        "@tailwindcss/vite": "^4.0.17",
+        "astro": "^5.5.6",
+        "marked": "^15.0.7",
+        "tailwindcss": "^4.0.17"
+    },
+    "devDependencies": {
+        "@tailwindcss/typography": "^0.5.16",
+        "prettier": "^3.5.3",
+        "prettier-plugin-tailwindcss": "^0.6.11"
+    }
 }
